<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"

        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:text="@string/head_text"
        android:layout_height="wrap_content">

    </TextView>



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/question_text_view"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:text="@string/question_declaration"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="34dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/true_button"
            android:text="@string/true_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/false_button"
            android:text="@string/false_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">


    <ImageButton
        android:id="@+id/previous_button"
        android:src="@drawable/arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <ImageButton
            android:contentDescription="@string/next_text"
            android:id="@+id/next_button"
            android:src="@drawable/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



     </LinearLayout>

    <Button
        android:id="@+id/maths_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/science_section" />





</LinearLayout>